--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
 SECRET_KEY=<SECRET>
 GS_BUCKET_NAME=django_dev_bucket2
-DATABASE_URL=postgres://djangodevdbadmin:<Password>@//cloudsql/django-cloudrun-project:us-east1:django-dev-db/djangodevdb
+DATABASE_URL=postgres://djangodevdbadmin:7j4nP8*Vn>/=Vun=@//cloudsql/django-373916:us-central1:django-dev-db/djangodevdb
