.env secrets updated

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PYTHON_ENV=dev
 PORT=8000
-SECRET_KEY=<SECRET>
+SECRET_KEY=django_app_settings
 GS_BUCKET_NAME=django_dev_bucket2
 
 USE_CLOUD_SQL_AUTH_PROXY=True
