--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
 SECRET_KEY=django_app_settings
 GS_BUCKET_NAME=django_dev_bucket2
-    command: ./cloud_sql_proxy -instances="django-373916:us-central1:django-dev-db"=tcp:0.0.0.0:5432 -credential_file=/secrets/cloudsql/creds.json
+DATABASE_URL=postgres://djangodevdbadmin:d&Uf*a5Y3~fAGQ%/@//cloudsql/django-373916:us-central1:django-dev-db/djangodevdb
