added option log

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -79,7 +79,8 @@ steps:
       - '--quiet'
     id: Deploy
     entrypoint: gcloud
-
+  options:
+    logging: CLOUD_LOGGING_ONLY
 # Store images in Google Artifact Registry
 images:
   - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
