--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -94,7 +94,11 @@ steps:
 # Store images in Google Artifact Registry
 images:
   - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+options:
+  logging: CLOUD_LOGGING_ONLY
 
 tags:
   - gcp-cloud-build-deploy-cloud-run
   - gcp-cloud-build-deploy-cloud-run-managed
+options:
+  logging: CLOUD_LOGGING_ONLY  
