--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,7 @@ steps:
       - Dockerfile
     id: Build  
   options:
-  logging: CLOUD_LOGGING_ONLY
+    logging: CLOUD_LOGGING_ONLY
 
   # 1. Docker push to Google Artifact Registry
   - name: gcr.io/cloud-builders/docker
@@ -20,7 +20,7 @@ steps:
       - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
     id: Push
   options:
-  logging: CLOUD_LOGGING_ONLY   
+    logging: CLOUD_LOGGING_ONLY   
 
   # 2. Make migrations
   - name: gcr.io/google-appengine/exec-wrapper
@@ -90,4 +90,6 @@ images:
 
 tags:
   - gcp-cloud-build-deploy-cloud-run
-  - gcp-cloud-build-deploy-cloud-run-managed  
+  - gcp-cloud-build-deploy-cloud-run-managed
+  options:
+    logging: CLOUD_LOGGING_ONLY    
