finally trigger updated

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,9 @@ steps:
       - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
       - .
       - '-f'
-      - Dockerfile    
+      - Dockerfile
+  options:
+  logging: CLOUD_LOGGING_ONLY        
     id: Build  
 
   # 1. Docker push to Google Artifact Registry
@@ -16,6 +18,8 @@ steps:
     args:
       - push
       - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA' 
+  options:
+  logging: CLOUD_LOGGING_ONLY
     id: Push 
 
   # 2. Make migrations
