--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PYTHON_ENV=dev
-PORT=8000SECRET_KEY=M18OM2DJBgWbBzQ7+tkYbZV+WgXGlzPZLJthSICt
-SECRET_KEY=a694d2f9f0d106ebab87012dfbca88953d0e58a4	
+PORT=8000
+SECRET_KEY=My_secret_key	
 GS_BUCKET_NAME=django_dev_bucket2
 
 USE_CLOUD_SQL_AUTH_PROXY=True
