--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -89,4 +89,5 @@ images:
 tags:
   - gcp-cloud-build-deploy-cloud-run
   - gcp-cloud-build-deploy-cloud-run-managed
-  
+options:
+  logging: CLOUD_LOGGING_ONLY  
